[package]
name = "ruso"
author = "Cyanism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive_more = "0.99.17"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dirs = "5.0.1"
futures-util = "0.3.28"
gstreamer = "0.21.0"
gstreamer-app = "0.21.0"
gstreamer-audio = "0.21.0"
libosu = { version = "0.0.28", path = "./libosu" }
rfd = "0.11.4"
serde = "1.0.183"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
url = "2.4.0"
