[package]
name = "ruso"
author = "Cyanism"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ctrlc = { version = "3.4.1", features = ["termination"] }
derive_more = "0.99.17"
dioxus = "*"
dioxus-desktop = "0.4.0"
dirs = "5.0.1"
futures-util = { version = "0.3.28", features = ["io"]}
# gstreamer = "0.21.0"
# gstreamer-app = "0.21.0"
# gstreamer-audio = "0.21.0"
hound = "3.5.0"
id3 = "1.7.0"
libc = "0.2.147"
libosu = { version = "0.0.28", path = "./lib/libosu", features = ["pp-calc"] }
minimp3 = "0.5.1"
mp3lame-encoder = "0.1.4"
rfd = "0.11.4"
rosu-pp = "0.9.5"
serde = "1.0.183"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
url = "2.4.0"
vorbis_rs = "0.5.0"
zip = { version = "0.6.6", features = ["deflate"] }
