[package]
authors = ["Cyanism <github@cyan.slmail.me>"]
description = "A cross-platform CLI and GUI application to easily modify osu! beatmap parameters."
edition = "2021"
homepage = "https://github.com/Cyanistic/ruso"
keywords = ["osu", "utility", "cli", "gui"]
license = "GPL-3.0"
name = "ruso"
readme = "README.md"
repository = "https://github.com/Cyanistic/ruso"
version = "0.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = "symbols"

[dependencies]
anyhow = "1.0.75"
ctrlc = { version = "3.4.1", features = ["termination"] }
dioxus = "0.4"
dioxus-desktop = "0.4.0"
dirs = "5.0.1"
futures-util = { version = "0.3.28", features = ["io"] }
hound = "3.5.0"
id3 = "1.7.0"
libosu = { version = "0.0.28", path = "./lib/libosu", features = ["pp-calc"] }
minimp3 = "0.5.1"
mp3lame-encoder = "0.1.4"
rfd = "0.11.4"
rosu-pp = "0.9.5"
serde = "1.0.183"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["io-std", "io-util", "macros", "rt", "time"] }
tokio-tungstenite = "0.20.0"
url = "2.4.0"
vorbis_rs = "0.5.0"
zip = { version = "0.6.6", features = ["deflate"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"
